# BareBonesRenderer

./: CMakeLists.txt  LICENSE  README.md
include/: constants.hpp
include/core/: camera.hpp  mesh.hpp  render.hpp  transform.hpp
include/platform/: my_window.hpp
include/utils/: data_f.hpp  log.hpp
src/: main.cpp
src/core/: camera.cpp  mesh.cpp  render.cpp  transform.cpp
src/platform/: run_loop.cpp  window.cpp
src/utils/: data_f.cpp  log.cpp
